# Genimind-OHOS

./: .gitignore  BUILD.gn  README.md
aht20/: BUILD.gn
genimind_ohos/: BUILD.gn  genimind_ohos.c
mqtt_task/: BUILD.gn  mqtt_task.c  mqtt_task.h
paho_mqtt/: BUILD.gn
