static_library("genimind_ohos") {
    sources = [
        "genimind_ohos.c",
    ]

    include_dirs = [
        # include "ohos_init.h"
        "//commonlibrary/utils_lite/include",
        # include CMSIS-RTOS API V2 for OpenHarmony1.0+
        "//kernel/liteos_m/kal/cmsis",
        # include IoT硬件设备操作接口 for OpenHarmony1.0+：
        "//base/iothardware/peripheral/interfaces/inner_api",
        # mqtt
        "//applications/sample/wifi-iot/app/mqtt_task",
        # aht20
        "//applications/sample/wifi-iot/app/aht20",
        # include HAL接口中的WIFI接口
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        # EasyWiFi模块接口
        "//applications/sample/wifi-iot/app/easy_wifi/src",     
        # cJSON模块
        "//third_party/cJSON",
    ]
}